Fixed Overlapping Bio Cards
Fixes #31

--- a/assets/css/_bio.less
+++ b/assets/css/_bio.less
@@ -222,7 +222,7 @@ body.bio {
 }
 
 
-@media screen and (max-width: @breakpoint-medium) {
+@media screen and (max-width: @breakpoint-large) {
 	.timeline-container {
 		padding: 150px 0;
 		&:after {
